<resources>
    <string name="rate">About us</string>
    <string name="abs_list">Absences list:</string>

    <string name="accueil">Hii</string>
    <string name="app_name">Esprit_Space</string>

    <string name="cc">CC</string>
    <string name="communicate">Communicate</string>
    <string name="close">Close</string>
    <string name="date">Date</string>

    <string name="edit_profile">Edit Picture</string>
    <string name="exam">Exam</string>

    <string name="home">Home</string>
    <string name="checkYourEmail">Invalid Email!</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="justif">Justification</string>

    <string name="about_us">LÉcole supérieure privée d ingénierie et de technologie ou ESPRIT est une école d ingénieurs privée de Tunisie basée à l Ariana et agréée par le ministère de l Enseignement supérieur et de la Recherche scientifique. ESPRIT a également une branche école de commerce, la ESPRIT Business School</string>

    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="mustNotBeEmpty">Must not be empty!</string>


    <string name="open">Open</string>
    <string name="period">Period</string>
    <string name="profile">Profile</string>
    <string name="password_forgotten">Password forgotten?</string>
    <string name="rememberMe">Remember me</string>

    <string name="name">Safa Hathrjhgfdoubi</string>
    <string name="safa_email">safa.hna,;aaathroubii@esprit.tn</string>
    <string name="settings">Settings</string>
    <string name="signIn">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="signup2"><u><i>Don\'t have an account? Sign up</i></u></string>
    <string name="sync">Evaluation</string>
    <string name="share">Transport Line</string>
    <string name="subject">Subject</string>
    <string name="trash">Absences</string>
    <string name="title">Logout</string>
    <string name="timetable">Timetables list</string>
    <string name="evaluation">Exams + Results + Credits</string>
    <string name="absences">See your absences here</string>
    <string name="view">View</string>
    <string name="view_results">View all your results here:</string>
    <string name="transport">Transport Line</string>
    <string name="message">Timetable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoutTitle">Logout</string>
    <string name="logoutMessage">You will be required to signin again next time!</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>