<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".views.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="632dp"
        android:background="@drawable/gradient_white"
        app:layout_constraintBottom_toBottomOf="parent" >

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/white"

        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="400dp"
        android:hint="@string/input_email"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:helperText="Email must be ***@esprit.tn"
        app:helperTextTextColor="@color/grey"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorTextColor="@color/design_default_color_error">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPasswordSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/white"

        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"

        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="300dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"

        android:hint="@string/input_password"

        app:errorEnabled="true"
        app:errorTextColor="@color/design_default_color_error"
        app:endIconMode="password_toggle"

        app:helperTextTextAppearance="@style/Widget.AppCompat.Spinner.Underlined"
        app:helperTextTextColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <android.widget.Button
        android:id="@+id/SignUpButton"

        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textColor="#F3F3F3"
        android:background="@drawable/button_shape_try"
        app:cornerRadius="10dp"
        android:elevation="20dp"
        android:padding="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutPasswordSignUp" />

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="105dp"
        android:background="@drawable/shadow_button_signup"
        app:layout_constraintBottom_toBottomOf="@+id/SignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SignUpButton" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="119dp"
        android:layout_height="60dp"
        android:text="Sign Up"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutEmailSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/espritLogo"
        android:layout_width="132dp"
        android:layout_height="143dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kisspng_esprit_higher_school_of_communication_of_tunis_con_emam_5b42b64c541ab4_5414050515310987003445_removebg_preview" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-270dp"
        android:layout_marginBottom="-130dp"
        android:src="@drawable/ic_esprittriangles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="338dp"
        android:layout_marginTop="-170dp"
        android:layout_marginEnd="-100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/triangles" />


</androidx.constraintlayout.widget.ConstraintLayout>